--- a/eites.html
+++ b/eites.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>Example - example-guide-concepts-1-production</title>
   <script src="https://code.angularjs.org/snapshot/angular.min.js"></script>
-  <script src="js/eite.js"></script>
+  <script src="eite.js"></script>
 </head>
 
 <body>
